Add: Dodanie porowniania metod z biblioteki PyEcgDetector do wykrywania QRS.

--- a/ecd_sandbox/pyEcgComparsion.ipynb
+++ b/ecd_sandbox/pyEcgComparsion.ipynb
@@ -56,21 +56,26 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-04-03T09:10:34.148220Z",
-     "start_time": "2024-04-03T09:10:32.949412Z"
+     "end_time": "2024-04-03T09:14:45.313176Z",
+     "start_time": "2024-04-03T09:14:43.937367Z"
     }
    },
    "id": "d97a7adee6679950",
-   "execution_count": 16
+   "execution_count": 17
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-04-03T09:14:45.329113Z",
+     "start_time": "2024-04-03T09:14:45.314210Z"
+    }
    },
-   "id": "b0da659d0b9b3439"
+   "id": "b0da659d0b9b3439",
+   "execution_count": 17
   }
  ],
  "metadata": {
